[package]
name = "runestone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
bitcoin-arch = { git = "https://github.com/Arch-Network/bitcoin-arch.git" }
serde_json = "1.0.116"
serde_with = "3.7.0"
anyhow = "1.0.82"
